--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "velocityx",
-  "version": "1.0.2-alpha",
+  "version": "1.4.0",
   "private": true,
   "scripts": {
     "start": "docusaurus start",
